Vertex Paint... not painting in the ViewPort #49220

Closed
opened 2016-09-01 13:34:31 +02:00 by Luca Crisi · 23 comments

Vertex Paint... is not painting in the ViewPort

OS: Windows 8.1 64 bit
GPU: nVidia GT740M

Not working Blender Version: 2.77a
Working Blender Version: 2.75

Said that i unwrapped the object and subdivided it a lot, when I try to vertex paint (using the draw brush) it in any color, nothing is painted.
But, the default "Col" Vertex Color group is being correctly created in the Object Data panel.

Possibly, the group contains the stroke info, but it's simply not drawn onto the mesh at paint time?

Vertex Paint... is not painting in the ViewPort OS: Windows 8.1 64 bit GPU: nVidia GT740M Not working Blender Version: 2.77a Working Blender Version: 2.75 Said that i unwrapped the object and subdivided it a lot, when I try to vertex paint (using the draw brush) it in any color, nothing is painted. But, the default "Col" Vertex Color group is being correctly created in the Object Data panel. Possibly, the group contains the stroke info, but it's simply not drawn onto the mesh at paint time?
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BugFinder

Added subscriber: @BugFinder

#49221 was marked as duplicate of this issue

#49221 was marked as duplicate of this issue

Added subscriber: @Sergey

Added subscriber: @Sergey

Please don't use regressions project unless the thing worked in latest stable release. This project is used to indicate whether we've got show stoppers for the upcoming release.

As for the bug itself i can't reproduce it. Several things:

Please don't use regressions project unless the thing worked in latest stable release. This project is used to indicate whether we've got show stoppers for the upcoming release. As for the bug itself i can't reproduce it. Several things: - Test if 2.78 testbuild2 - [x] works for you. - Test if latest buildbot build works for you. - Provide exact steps with .blend file included which indicates the problem. - [x] http://download.blender.org/release/Blender2.78/
Author

Added the duplicate because I erroneously reported this bug the first time as REGRESSION.

I will not install a NOT OFFICIAL release:
There are already enough bugs in the official ones!

Steps to reproduce the bug (do you really need a .blend file for this?):

  • Unwrap an object and subdivided it a lot
  • Try to vertex paint (using the draw brush) it in any color: nothing is painted.

The default "Col" Vertex Color group is being created in the Object Data panel...
Without the color data, of course.

Added the duplicate because I erroneously reported this bug the first time as REGRESSION. I will not install a NOT OFFICIAL release: There are already enough bugs in the official ones! Steps to reproduce the bug (do you really need a .blend file for this?): * Unwrap an object and subdivided it a lot * Try to vertex paint (using the draw brush) it in any color: nothing is painted. The default "Col" Vertex Color group is being created in the Object Data panel... Without the color data, of course.

There is no need to install anything, you can download. zip archive, unpack it to any location, perform required tests and then remove the testbuild once you're done. This is the only way we can know if something is still affecting upcoming releases or not.

I did exact same steps on a default cude and did not see any issues. There are lots of various settings in blender and the only reliable way to know if something is not caused by specific combinations of those settings is to provide .blend file.

Also, are there any errors printed to the console when you're painting?

There is no need to install anything, you can download. zip archive, unpack it to any location, perform required tests and then remove the testbuild once you're done. This is the only way we can know if something is still affecting upcoming releases or not. I did exact same steps on a default cude and did not see any issues. There are lots of various settings in blender and the only reliable way to know if something is not caused by specific combinations of those settings is to provide .blend file. Also, are there any errors printed to the console when you're painting?
Author

Vertex NOT Paint.png

It is supposed to be a red perimeter (or circumference) around the island mesh, since I vertex painted it all around it.

Instead, there is NOTHING.

And, yes, all the normals are facing UP

![Vertex NOT Paint.png](https://archive.blender.org/developer/F349682/Vertex_NOT_Paint.png) It is supposed to be a red perimeter (or circumference) around the island mesh, since I vertex painted it all around it. Instead, there is NOTHING. And, yes, all the normals are facing UP
Author

Test File:

There should be a red paint on that RoundCube
But there isn't

Vertex NOT Paint 02.png

Vertex NOT Paint 02.blend

Test File: There should be a red paint on that RoundCube But there isn't ![Vertex NOT Paint 02.png](https://archive.blender.org/developer/F349685/Vertex_NOT_Paint_02.png) [Vertex NOT Paint 02.blend](https://archive.blender.org/developer/F349684/Vertex_NOT_Paint_02.blend)
Author

And... no. TestBuild 2 FAILED: Same result

And... no. TestBuild 2 **FAILED**: Same result

One more question from my side: are you painting with tablet or a mouse?

One more question from my side: are you painting with tablet or a mouse?
Author

Just a simple mouse...
Shouldn't it work?

Just a simple mouse... Shouldn't it work?

Well, it should. Just troubleshooting route depends on whether it's a tablet or mouse.

What about errors in the console? Did you check for those?

Well, it should. Just troubleshooting route depends on whether it's a tablet or mouse. What about errors in the console? Did you check for those?
Author

No... How do I do that?

No... How do I do that?
Author

Or maybe there's something hidden in my preference settings which prevent the correct behaviour...

I'd be not very surprised to learn that:
Some months ago I discovered with the help of a Developer, here, that a setting of mine was preventing the Scripts from automatically running.

And it turned ot to be a bug only present in the Windows version of Blender.

Or maybe there's something hidden in my preference settings which prevent the correct behaviour... I'd be not very surprised to learn that: Some months ago I discovered with the help of a Developer, here, that a setting of mine was preventing the Scripts from automatically running. And it turned ot to be a bug only present in the Windows version of Blender.
Author

By the way... I posted another (completely different) bug.
Nearly at the same time of this one.

But no one seems to care about.

It's a bug in the File Save Screen not respecting the UI settings.

By the way... I posted **another** (completely different) bug. Nearly at the same time of this one. But no one seems to care about. It's a bug in the File Save Screen not respecting the UI settings.
Author

Just found a WORKAROUND: Just remove Use OpenSubDiv from the SubSurf Modifier.
Hope it helps someone else facing the same issue.

Just found a **WORKAROUND**: Just remove `Use OpenSubDiv` from the SubSurf Modifier. Hope it helps someone else facing the same issue.
Sergey Sharybin self-assigned this 2016-09-02 12:59:23 +02:00

Ah, that's a good thing. Had OSD device set to None in the preferences, so that's why it worked for me.

Ok, now can see the issue and will try to solve!

Ah, that's a good thing. Had OSD device set to None in the preferences, so that's why it worked for me. Ok, now can see the issue and will try to solve!
Author

Thank you, dear!

Thank you, dear!

This issue was referenced by 062732905a

This issue was referenced by 062732905ae52855d26884378de029e49bc68fec

Have a fix for the issue, will be committed once the Git is open again after RC1 builds are all ready.

Have a fix for the issue, will be committed once the Git is open again after RC1 builds are all ready.
Author

Wow! that's FAST!!
This is what I call EFFICIENCY!

Thank you!

Wow! that's FAST!! This is what I call EFFICIENCY! Thank you!

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49220
No description provided.